restyling and responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     margin: 0;
   }
   
-  .ui.cards > .card > .image {
+  /* .ui.cards > .card > .image {
     height: 250px;
     padding: 20px;
     background: #fff;
@@ -90,4 +90,4 @@
     color: #fff;
     font-size: 18px;
     margin-left: 0;
-  }
+  } */
